--- a/linear-opengl.cabal
+++ b/linear-opengl.cabal
@@ -1,7 +1,7 @@
 name:                linear-opengl
 version:             0.1.0.0
 synopsis:            Isomorphisms between linear and OpenGL types
--- description:         
+description:         This provides various useful utilities for mapping OpenGL vectors, vertices, and matrices to their analogues in the `linear` package
 homepage:            http://www.github.com/bgamari/linear-opengl
 license:             BSD3
 license-file:        LICENSE
@@ -11,6 +11,10 @@ copyright:           (c) 2014 Ben Gamari
 category:            Graphics
 build-type:          Simple
 cabal-version:       >=1.10
+
+source-repository head
+  location:            git://github.com/bgamari/linear-opengl
+  type:                git
 
 library
   exposed-modules:     Linear.OpenGL
