--- a/linear-opengl.cabal
+++ b/linear-opengl.cabal
@@ -18,9 +18,12 @@ source-repository head
 
 library
   exposed-modules:     Linear.OpenGL
+  other-modules:       Linear.OpenGL.MatrixUniforms
   build-depends:       base >=4.6 && <4.8,
                        linear >=1.10 && <1.11,
+                       lens >=4.2 && <4.3,
+                       tagged >= 0.7 && < 0.8,
                        OpenGL >=2.9 && <2.10,
-                       lens >=4.2 && <4.3
+                       OpenGLRaw >= 1.5 && <1.6
   hs-source-dirs:      src
   default-language:    Haskell2010
