--- a/linear-opengl.cabal
+++ b/linear-opengl.cabal
@@ -22,6 +22,7 @@ library
   build-depends:       base >=4.6 && <4.8,
                        linear >=1.10 && <1.11,
                        lens >=4.2 && <4.3,
+                       distributive >=0.4 && <0.5,
                        tagged >= 0.7 && < 0.8,
                        OpenGL >=2.9 && <2.10,
                        OpenGLRaw >= 1.5 && <1.6
